3.6.1/_sources/gallery/misc/fig_x.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/misc/fig_x.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_misc_fig_x.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_misc_fig_x.py:


=======================
Adding lines to figures
=======================

Adding lines to a figure without any axes.

.. redirect-from:: /gallery/pyplots/fig_x

.. GENERATED FROM PYTHON SOURCE LINES 10-20

.. code-block:: default


    import matplotlib.pyplot as plt
    import matplotlib.lines as lines


    fig = plt.figure()
    fig.add_artist(lines.Line2D([0, 1], [0, 1]))
    fig.add_artist(lines.Line2D([0, 1], [1, 0]))
    plt.show()




.. image-sg:: /gallery/misc/images/sphx_glr_fig_x_001.png
   :alt: fig x
   :srcset: /gallery/misc/images/sphx_glr_fig_x_001.png, /gallery/misc/images/sphx_glr_fig_x_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 21-29

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.pyplot.figure`
   - `matplotlib.lines`
   - `matplotlib.lines.Line2D`


.. _sphx_glr_download_gallery_misc_fig_x.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: fig_x.py <fig_x.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: fig_x.ipynb <fig_x.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
